Prevent like-dislike-wrapper from flickering after like

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -195,6 +195,12 @@
   .liked .flipping .like-dislike-wrapper {
     display: none;
   }  
+  
+  .liked .flipping-forward .like-dislike-wrapper {
+    display: none;
+  }  
+
+
 
 /**
  * Footer
